--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -20,6 +20,7 @@ jobs:
         submodules: 'true'
       
     - run: |
+        apt-get install build-essential bison flex libgmp3-dev libmpc-dev libmpfr-dev texinfo libcloog-isl-dev libisl-0.18-dev
         chmod +x ./build_compiler.sh
         TARGET=${{ matrix.target }}-elf ./build_compiler.sh
 
