--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -19,8 +19,12 @@ jobs:
       with:
         submodules: 'true'
       
-    - run: |
-        apt-get install build-essential bison flex libgmp3-dev libmpc-dev libmpfr-dev texinfo libcloog-isl-dev libisl-0.18-dev
+    - name: Resolve dependency
+      run: |
+        sudo apt-get update
+        sudo apt-get install build-essential bison flex libgmp3-dev libmpc-dev libmpfr-dev texinfo libcloog-isl-dev libisl-0.18-dev
+    - name: Build
+      run: |
         chmod +x ./build_compiler.sh
         TARGET=${{ matrix.target }}-elf ./build_compiler.sh
 
